--- a/single-spa/root-config/src/index.ejs
+++ b/single-spa/root-config/src/index.ejs
@@ -49,7 +49,8 @@
     <script type="systemjs-importmap">
     {
       "imports": {
-        "@sing-spa-test/root-config": "//localhost:9000/sing-spa-test-root-config.js"
+        "@sing-spa-test/root-config": "//localhost:9000/sing-spa-test-root-config.js",
+        "@sing-spa-test/store-events": "//localhost:8082/sing-spa-test-store-events.js"
       }
     }
   </script>
